send secret messages and read them

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
       <systemPath>${project.basedir}/jar/MultiChainJavaAPI-0.4.1-SNAPSHOT.jar</systemPath>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
